# deep-reinforcement-learning-for-automated-stock-trading-an-e

./: CLAUDE.md  README.md  pyproject.toml
docs/: open_questions.md
notebooks/: 01_data_exploration.ipynb
reports/cycle_2/: metrics.json  preflight.md  technical_findings.md
src/data/: downloader.py
src/features/: build_features.py
tests/: test_data_integrity.py
